package name github url changed

--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/jira-story-point-calculator.git"
+    "url": "https://github.com/nirazanbasnet/jira-story-point-calculator"
   }
 }
